Fixed tile grid rendering in sceneed (game objects). case 450
* Changed RenderData#position Vector3d => Point3d
* Fixed NPE when closing game objects with ref comps (RefComponentNode#validateComponent)
* Minor meaninless dimension-bug in Camera#project (x used instead of y, both 0 anyway)
* Added IRenderView#getCamera
* Added back-to-front sorting of renderdata based on camera
* Implemented TileGridRenderer
* Renamed LayerNode#tiles => LayerNode#cells
* Fixed AABB for sprite2 and tile grid nodes

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -1093,6 +1093,7 @@
             id="com.dynamo.cr.tileeditor.scene.tileGridNode"
             loader="com.dynamo.cr.tileeditor.scene.TileGridLoader"
             node="com.dynamo.cr.tileeditor.scene.TileGridNode"
+            renderer="com.dynamo.cr.tileeditor.scene.TileGridRenderer"
             resource-type="com.dynamo.cr.tileeditor.resourcetypes.TileGrid">
       </node-type>
       <node-type
