Copy mp4 to war

--- a/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr.web2/.gitignore
@@ -3,8 +3,8 @@ war/WEB-INF/deploy
 war/WEB-INF/classes
 war/WEB-INF/lib/*.jar
 war/defold
-war/site/*.html
 war/doc/*.json
+war/site/
 test-classes/*
 gwt-unitCache/*
 
