Added mime-type for mp4

--- a/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -21,4 +21,9 @@
       </auth-constraint>
   </security-constraint>
 
+  <mime-mapping>
+    <extension>.mp4</extension>
+    <mime-type>video/mp4</mime-type>
+  </mime-mapping>
+
 </web-app>
