changed .mp4 => mp4

--- a/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -22,7 +22,7 @@
   </security-constraint>
 
   <mime-mapping>
-    <extension>.mp4</extension>
+    <extension>mp4</extension>
     <mime-type>video/mp4</mime-type>
   </mime-mapping>
 
