--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -63,11 +63,11 @@
             proto-message-class="com.dynamo.tile.proto.Tile$TileGrid"
             resource-refactor-participant-class="com.dynamo.cr.tileeditor.core.refactoring.TileGridRefactorParticipant"
             template-data="tile_set: &quot;&quot; layers: {id: &quot;layer1&quot; z: 0 is_visible: 1}"
-            type-class="tile_grid">
+            type-class="component">
          <references>
-            <reference-type-class
-                  type-class="tile_set">
-            </reference-type-class>
+            <reference-resource-type
+                  resource-type="com.dynamo.cr.tileeditor.resourcetypes.TileSet">
+            </reference-resource-type>
          </references>
       </resource-type>
       <resource-type
