--- a/com.dynamo.cr.common/.project
+++ b/com.dynamo.cr.common/.project
@@ -43,7 +43,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1296580591708</id>
+			<id>1325628470807</id>
 			<name>DYNAMO_HOME</name>
 			<type>22</type>
 			<matcher>
@@ -52,7 +52,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1296580591711</id>
+			<id>1325628470809</id>
 			<name>DYNAMO_HOME</name>
 			<type>22</type>
 			<matcher>
@@ -61,12 +61,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1296580591715</id>
+			<id>1325628470812</id>
 			<name>DYNAMO_HOME</name>
 			<type>22</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-*.proto</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1325628470815</id>
+			<name>DYNAMO_HOME</name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.py</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
