Css tweaks + added clean theme

--- a/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr.web2/.gitignore
@@ -2,7 +2,8 @@
 war/WEB-INF/deploy
 war/WEB-INF/classes
 war/WEB-INF/lib/*.jar
-war/defold
+war/defold/*cache*
+war/defold/hosted.html
 war/doc/*.json
 war/site/
 test-classes/*
