Removed theme and explicit inclusion of clean.css

--- a/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr.web2/.gitignore
@@ -2,8 +2,7 @@
 war/WEB-INF/deploy
 war/WEB-INF/classes
 war/WEB-INF/lib/*.jar
-war/defold/*cache*
-war/defold/hosted.html
+war/defold/
 war/doc/*.json
 war/site/
 test-classes/*
