Added unit-tests for refactoring of tilegrid-files referred from collision-objects. No bug was actually fixed. case 391 * Added TileGrid as reference to collision-object. Wasn't required in order to run new unit-tests though..

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -365,6 +365,9 @@
             <reference-resource-type
                   resource-type="com.dynamo.cr.ddfeditor.resourcetypes.ConvexShape">
             </reference-resource-type>
+            <reference-resource-type
+                  resource-type="com.dynamo.cr.tileeditor.resourcetypes.TileGrid">
+            </reference-resource-type>
          </references>
       </resource-type>
       <resource-type
