--- a/com.dynamo.cr.web2/.settings/com.google.appengine.eclipse.core.prefs
+++ b/com.dynamo.cr.web2/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,4 +1,7 @@
-#Sun Oct 23 22:28:28 CEST 2011
+#Sun Jan 15 15:46:37 CET 2012
 eclipse.preferences.version=1
 filesCopiedToWebInfLib=geronimo-jpa_3.0_spec-1.1.1.jar|datanucleus-appengine-1.0.9.final.jar|datanucleus-jpa-1.1.5.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar|datanucleus-core-1.1.5.jar|appengine-jsr107cache-1.5.5.jar|appengine-api-labs-1.5.5.jar|appengine-api-1.0-sdk-1.5.5.jar|jsr107cache-1.1.jar
 gaeDeployDialogSettings=
+gaeIsEclipseDefaultInstPath=true
+googleCloudSqlEnabled=false
+localDevMySqlEnabled=true
