--- a/com.dynamo.cr.go/plugin.xml
+++ b/com.dynamo.cr.go/plugin.xml
@@ -14,6 +14,7 @@
             id="com.dynamo.cr.go.core.nodes.collection"
             loader="com.dynamo.cr.go.core.CollectionLoader"
             node="com.dynamo.cr.go.core.CollectionNode"
+            presenter="com.dynamo.cr.go.core.CollectionPresenter"
             resource-type="com.dynamo.cr.go.resourcetypes.Collection">
       </node-type>
    </extension>
