JGit server support in cr-server. case 602 * Upgraded to jersey 1.11 and related libraries  (jackson, grizzly etc) * Switch to grizzly2 and jersey-grizzly2 implementation * The same HTTP-server (grizzly) is shared between jgit and jax-rs * Resource-server, commonly at port 6000, is currently not migrated to grizzly * Removed obsolete scripts and test-data from com.dynamo.cr.server * Extended protocol to include git repository url * cr-server now requires hostname to be specified * OpenID authentication is performed in HTTP Basic auth instead of custom headers. The JGit client API doesn't have support for custom headers. * Switched to jgit 1.2. JGit server wasn't part of the eclipse org.eclipse.jgit-package. The jgit jars is now present in com.dynamo.cr.server/ext * All new projects have http.receivepack options set to true. This is required for push over http. Existing projects must be updated though

--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -6,8 +6,6 @@ bin.includes = META-INF/,\
                ext/jsr250-api-1.0.jar,\
                ext/jsr311-api-1.1.1.jar,\
                plugin.xml,\
-               test_data/,\
-               scripts/,\
                ext/derby.jar,\
                ext/postgresql-9.0-801.jdbc4.jar,\
                ext/jetty-all-7.0.2.v20100331.jar,\
@@ -17,8 +15,17 @@ bin.includes = META-INF/,\
                ext/slf4j-api-1.6.1.jar,\
                src/logback.xml,\
                ext/janino.jar,\
-               ext/jersey-client-1.8.jar,\
-               ext/jersey-core-1.8.jar,\
-               ext/jersey-server-1.8.jar,\
-               ext/grizzly-servlet-webserver-1.9.18-i.jar,\
-               ext/jersey-grizzly-1.8.jar
+               ext/grizzly-http-2.1.2.jar,\
+               ext/grizzly-http-server-2.1.2.jar,\
+               ext/jersey-client-1.11.jar,\
+               ext/jersey-core-1.11.jar,\
+               ext/jersey-grizzly2-1.11.jar,\
+               ext/jersey-server-1.11.jar,\
+               ext/servlet-api-2.5.jar,\
+               ext/grizzly-framework-2.1.2.jar,\
+               ext/grizzly-http-servlet-2.1.2.jar,\
+               ext/jersey-grizzly2-servlet-1.11.jar,\
+               ext/jersey-servlet-1.11.jar,\
+               ext/org.eclipse.jgit-1.2.0.201112221803-r.jar,\
+               ext/org.eclipse.jgit.http.server-1.2.0.201112221803-r.jar,\
+               ext/jsch-0.1.44-1.jar
