--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -13,11 +13,11 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/input.jar,\
                DYNAMO_HOME/share/java/particle.jar,\
                ext/commons-lang3-3.0-beta.jar,\
-               ext/jackson-core-asl-1.7.1.jar,\
-               ext/jackson-mapper-asl-1.7.1.jar,\
                ext/commons-io-2.0.1.jar,\
                DYNAMO_HOME/share/java/fontc.jar,\
-               ext/jersey-client-1.8.jar,\
-               ext/jersey-core-1.8.jar,\
                DYNAMO_HOME/share/java/tile.jar,\
-               DYNAMO_HOME/ext/share/java/vecmath.jar
+               DYNAMO_HOME/ext/share/java/vecmath.jar,\
+               ext/jackson-core-asl-1.9.2.jar,\
+               ext/jackson-mapper-asl-1.9.2.jar,\
+               ext/jersey-client-1.11.jar,\
+               ext/jersey-core-1.11.jar
